# libllfat

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt  Makefile  boot.c  boot.h  directory.c  entry.c  entry.h  fs.c  fs.h  inverse.c  inverse.h  linux_tsearch.c  linux_tsearch.h  llfat.h.header  long.c  long.h  portable_endian.h  reference.c  reference.h  table.c  tsearch.c  ucs2conv.c  ucs2conv.h  unit.c
tools/: CMakeLists.txt  fatexample.c  fattest.c  fattool.c
